--- a/hardtictac.html
+++ b/hardtictac.html
@@ -7,19 +7,19 @@
 
 		<div class="mainboard">
 			<div class="row">
-				<div class="square"></div>
-				<div class="square"></div>
-				<div class="square"></div>
+				<div class="square"><div class="indicator"></div></div>
+				<div class="square"><div class="indicator"></div></div>
+				<div class="square"><div class="indicator"></div></div>
 			</div>
 			<div class="row">
-				<div class="square"></div>
-				<div class="square"></div>
-				<div class="square"></div>
+				<div class="square"><div class="indicator"></div></div>
+				<div class="square"><div class="indicator"></div></div>
+				<div class="square"><div class="indicator"></div></div>
 			</div>
 			<div class="row">
-				<div class="square"></div>
-				<div class="square"></div>
-				<div class="square"></div>
+				<div class="square"><div class="indicator"></div></div>
+				<div class="square"><div class="indicator"></div></div>
+				<div class="square"><div class="indicator"></div></div>
 			</div>
 		</div>
 		
